# Parallel_Programming_WI4265TU

./: README.md
code/: circular_shift.py  hello.c  hello_world_c  non_blocking_example  non_blocking_example.c  pass_data  pass_data.c  send_rec_1  send_rec_1.c  send_rec_example  send_rec_final  send_rec_final.c  send_rec_final2  send_rec_final2.c  send_recv.example.c  serial_gramm  serial_gramm.c
examples/: CMakeLists.txt
examples/final/: 01-matvec-final.c
examples/introduction/: 01-game-introduction.c  02-compute-pi-introduction.c  CMakeLists.txt  minimpi.h
examples/mpi/: 01-hello-world-mpi.c  02-pass-data-mpi.c  04-circular-shift-mpi.c  05-gram-schmidt.c  06-random-mpi.c  07-game-mpi.c  CMakeLists.txt
examples/openmp/: 01-hello-world-openmp  01-hello-world-openmp.c  02-compute-pi-openmp  02-compute-pi-openmp.c  03-axpy-openmp.c  04-inner-product-openmp  04-inner-product-openmp.c  05-dyadic-product-openmp  05-dyadic-product-openmp.c  06-histogram  06-histogram.c  07-circular-shift-openmp.c  08-matrix-matrix-openmp  08-matrix-matrix-openmp.c  09-random-openmp.c  10-binary-search-openmp.c  12-jacobi-iteration-offload.c  CMakeLists.txt  example_reduction  example_reduction.c
examples/threads/: 01-hello-world-threads.c  02-rank-threads.c  03-compute-pi-threads.c  05-fifo-threads.c  06-barrier-threads.c  07-reduction-threads.c  08-gram-schmidt-threads.c  09-thread-local.c  CMakeLists.txt
python_code/: Untitled.ipynb  broadcastexample.py  circular_shift.py  grammschmidt.py  grant_schmidt.py  grant_schmidt2.py  grant_schmidt3.py  grant_schmidt4.py  grant_schmidt5.py  mpi_start.py  send_recv.py
